# LegBiCal

./: .gitignore  CITATION.cff  README.md  THIRD_PARTY.md  pyproject.toml
.github/workflows/: test.yml
cuda/: README.md
cuda/benchmarks/: profile_replay.py
cuda/notebooks/: README.md  covariance_calibration_run.ipynb  covariance_tuning_tutorial.ipynb
cuda/src/estimation_calibration_cuda/: README.md  batched_calibration.py  covariance_calibration.py  fixed_slot_inekf.py  invariant_ekf.py
cuda/tests/: test_contact_process_covariance.py  test_correct_block.py  test_insert_block.py  test_propagate_block.py  test_release_surface.py  test_synthetic_golden.py  test_training_smoke.py  test_validation_selection.py
matlab/: README.md  run_calibration.m  setup.m
matlab/+legbical/: README.md
matlab/+legbical/+calibration/: CalibrationProblem.m  CovarianceParameterization.m  FrankWolfeOptimizer.m  ProjectedAdamOptimizer.m  SqpBfgsOptimizer.m
matlab/+legbical/+config/: options.m
matlab/+legbical/+estimation/: FIEGraph.m  FatropEstimator.m  KktSystem.m
matlab/data/: stride_demo.mat
matlab/tests/: test_fast_fie.m
prime/: README.md  THIRD_PARTY.md  run_calibration.py
prime/g1_prime/: README.md  environment.yml
prime/stride_prime/: README.md
prime/tests/: test_prime_fie.py
python/: README.md
python/bilevel/: README.md  calibration.py  codegen.py  config.py  data_io.py  kinematics.py  lmo.py  losses.py  models.py  robot.py  run_bilevel.py  sensitivity.py
python/tests/: test_optimization.py
python/tools/: generate_codegen.py
tests/: run.sh
(+9 files in other folders)
